job-k8s.yaml
# apiVersion: batchv1
apiVersion: v1
kind: Pod
metadata:
  name: pubg
spec:
  #schedule: "0 0 * * *"
  # jobTemplate:
  #   spec:
  # template:
  #   spec:
  containers:
    - name: hello
      image: "pubg-scraper:latest"
      imagePullPolicy: Never
      command:
        - "python"
        - "job.py"
      args:
        - "--quick"
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secrets/
          readOnly: true
      resources:
        requests:
          cpu: 500m
          memory: 64Mi
        limits:
          cpu: 500m
          memory: 64Mi
  restartPolicy: OnFailure
  volumes:
    - name: secret-volume
      secret:
        secretName: pubg-scraper-secret
