app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubg
  labels:
    app: pubg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pubg
  template:
    metadata:
      labels:
        app: pubg
    spec:
      containers:
        - name: hello
          image: "pubg-scraper:latest"
          imagePullPolicy: Never
          command:
            - "uvicorn"
          args:
            - "app:app"
            - "--host=0.0.0.0"
            - "--port=8080"
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secrets/
              readOnly: true
          resources:
            requests:
              cpu: 500m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 64Mi
      volumes:
        - name: secret-volume
          secret:
            secretName: pubg-scraper-secret
---
apiVersion: v1
kind: Service
metadata:
  name: pubg
spec:
  type: NodePort
  selector:
    app: pubg
  ports:
    - port: 8080
      targetPort: 8080
