ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pubg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: pubg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pubg
                port:
                  number: 8080
